kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  labels:
    name: nginx
spec:
  type: ClusterIP
  ports:
  - name: http-nginx
    port: 80
  selector:
    name: nginx
